<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue"
    android:id="@+id/rlRootLayout"
    tools:context="com.zolostaystask.register.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvToolbarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/str_login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.30">

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/str_register"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_28ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRegisterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_25sdp"
                android:text="@string/str_register_text"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.70"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_35sdp">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/imgPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_15sdp"
                    app:srcCompat="@drawable/ic_call" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutPhoneNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imgPhone"
                    android:textColorHint="@color/color_yellow_blackish"
                    app:hintTextAppearance="@style/TextInputLayoutTheme">

                    <com.zolostaystask.customWidgets.CustomEditText
                        android:id="@+id/editTextPhoneNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_phone_num_regi"
                        android:inputType="phone"
                        android:maxLength="10"
                        app:font="Roboto-Regular.ttf" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_35sdp">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/imgEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_15sdp"
                    app:srcCompat="@drawable/ic_email" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imgEmail"
                    android:textColorHint="@color/color_yellow_blackish"
                    app:hintTextAppearance="@style/TextInputLayoutTheme">

                    <com.zolostaystask.customWidgets.CustomEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_email"
                        android:inputType="textEmailAddress"
                        app:font="Roboto-Regular.ttf" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_35sdp">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/imgName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_15sdp"
                    app:srcCompat="@drawable/ic_name" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imgName"
                    android:textColorHint="@color/color_yellow_blackish"
                    app:hintTextAppearance="@style/TextInputLayoutTheme">

                    <com.zolostaystask.customWidgets.CustomEditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_name"
                        app:font="Roboto-Regular.ttf" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_35sdp">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/imgKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_15sdp"
                    app:srcCompat="@drawable/ic_key" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imgKey"
                    android:textColorHint="@color/color_yellow_blackish"
                    app:hintTextAppearance="@style/TextInputLayoutTheme">

                    <com.zolostaystask.customWidgets.CustomEditText
                        android:id="@+id/editTextPwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_pwd"
                        android:hint="@string/str_pwd"
                        android:inputType="textPassword"
                        app:font="Roboto-Regular.ttf" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@color/color_yellow"
                android:text="@string/str_register" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>